# BayesianABTesting

./: .gitignore  README.md  setup.cfg
BayesianABTesting/: BayesianABTesting.py
BayesianABTesting.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_BayesianABTesting.py
