[metadata]
# replace with your username:
name = BayesianABTesting
version = 0.0.2
author = Jeremy Miller
author_email = jeremymiller00@gmail.com
description = Bayesian AB Testing Convenience Functionality
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jeremymiller00/BayesianABTesting
project_urls =
    Bug Tracker = https://github.com/jeremymiller00/BayesianABTesting/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6